--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
 /*  your css code here. If applicable */
+:root {
+    --background-color: rgb(135, 206, 235);
+}
+
+/* Apply background color to the whole page */
+body {
+    background-color: var(--background-color);
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+article p:first-child {
+    background-color: black;
+    color: white;
+}
+
+article p:nth-child(2) {
+    color: black;
+}
+
+article p:last-child {
+    color: red;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+    margin: 5px 0;
+}
+
+/* Odd items should have a white background */
+ul li:nth-child(odd) {
+    background-color: white;
+}
+
+/* First and last items with font size 22px */
+ul li:first-child,
+ul li:last-child {
+    font-size: 22px;
+}
+
+/* Third-to-last item with pink background */
+ul li:nth-last-child(3) {
+    background-color: pink;
+}
